# commontrust_bot

./: .env.example  .gitignore  Dockerfile  README.md  create_project.py  docker-compose.coolify.yml  docker-compose.yml  pb_schema.json  project.json  pyproject.toml  requirements.txt  specs.md
commontrust_api/: __init__.py  app.py  auth.py  config.py  main.py  pb.py  pocketbase_client.py
commontrust_api/hub/: __init__.py  crypto.py  routes.py
commontrust_api/identity/: routes.py
commontrust_api/ledger/: __init__.py  models.py  routes.py  service.py
commontrust_api/reputation/: routes.py  service.py
commontrust_bot/: __init__.py  config.py  main.py  pocketbase_client.py  review_notify.py  review_response_token.py  ui.py  web_links.py
commontrust_bot/handlers/: __init__.py  admin.py  basic.py  credit.py  deal.py  dm.py  report.py  reputation.py
commontrust_bot/services/: __init__.py  ai_review.py  deal.py  mutual_credit.py  report.py  reputation.py
commontrust_credit_bot/: __init__.py  api_client.py  config.py  main.py
commontrust_credit_bot/handlers/: __init__.py  admin.py  basic.py  credit.py
commontrust_userbot/: auth.py  config.py  main.py
scripts/: pb_backfill_usernames.py  pb_create_admin_token.py  pb_setup_db.py
tests/: __init__.py  conftest.py  fake_commontrust_api.py  fake_pocketbase.py  fake_telegram.py  test_credit_handlers.py  test_deal_service.py  test_dm_flow.py  test_handlers_basic.py  test_handlers_credit_admin_reputation.py  test_handlers_deal.py  test_handlers_reputation_and_credit_more.py  test_imports.py  test_main_smoke.py  test_mutual_credit_service.py  test_pocketbase_client.py  test_reputation_service.py  test_web_links.py
web/: .env.example  Dockerfile  README.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  searchbox.tsx  sitemap.ts
web/app/admin/: page.tsx
web/lib/: admin_auth.ts  hebrew-rtl.ts  logo-base64.ts  pocketbase.ts  pocketbase_admin.ts  review_response_token.ts  types.ts  ui.ts
web/public/: logo-banner.psd  og-image.psd
(+15 files in other folders)
