[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commontrust-bot"
version = "1.0.0"
description = "Federated Reputation and Mutual Credit System for Telegram"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "CommonTrust Team" }]
dependencies = [
    "aiogram>=3.4.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
commontrust-bot = "commontrust_bot.main:run"

[tool.hatch.build.targets.wheel]
packages = ["commontrust_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
